feat: Carregar os projetos de forma dinamica

--- a/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
+++ b/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
@@ -61,35 +61,12 @@
                     </div>
                 </div>
 
-                <!-- <div class="container col-lg-9 col-md-12 col-sm-12 text-white text-center mt-5"> 
+                <div class=" col-lg-9 col-md-12 col-sm-12 text-white text-center mt-5"> 
                     <h3>Projetos ativos</h3>
                     <div class="card rounded-5 text-center">
-                        <div class="row justify-content-center"> 
-                            <div class="col-lg-3 col-md-12 col-sm-12 mx-3"> 
-                                <div class="card rounded-5 card-projetos border-0">
-                                    <img class="mx-auto mb-4 img-fluid perfil rounded-5"
-                                        src="../projetos/images/imagem-voluntarios-05.jpg">
-                                    <h4 class="">Adote um AUmigo</h4>
-                                    <h5>12 horas</h5>
-                                    <div class="col text-center margin">
-                                        <button class="btn btn-secondary my-2" id="encerrarBtn1">Encerrar</button>
-                                    </div>
-                                </div>
-                            </div> -->
-
-                            <!-- <div class="col-lg-3 col-md-12 col-sm-12 mx-3">
-                                <div class="card rounded-5 card-projetos border-0">
-                                    <img class="mx-auto mb-4 img-fluid perfil rounded-5"
-                                        src="../projetos/images/imagem-voluntarios-09.jpg">
-                                    <h4 class="">EcoVida</h4>
-                                    <h5>6 horas</h5>
-                                    <div class="col text-center margin">
-                                        <button class="btn btn-secondary my-2" id="encerrarBtn2">Encerrar</button>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-3 col-md-12 col-sm-12 mx-3"> 
+                        <div class="container2 row justify-content-center"> 
+                            
+                            <!-- <div class="col-lg-3 col-md-12 col-sm-12 mx-3"> 
                                 <div class="card rounded-5 card-projetos border-0">
                                     <img class="mx-auto mb-4 img-fluid perfil rounded-5"
                                         src="../projetos/images/imagem-voluntarios-06.jpg">
