--- a/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
+++ b/codigo-fonte/src/perfilEmpresa/perfilEmpresa.html
@@ -53,8 +53,8 @@
                     <h3>Empresa</h3>
                     <div class="card rounded-5 card-projetos border-0">
                         <img class="mx-auto mb-4 img-fluid perfil rounded-5" src="./imagens/perfilEmpresa.png">
-                        <h4 class="">Pet Vitallis</h4>
-                        <h5> <span id="totalProjetos">3</span> projetos </h5>
+                        <h4 id="nomeEmpresa"></h4>
+                        <h5> <span id="totalProjetos">0</span></h5>
                          <div class="col text-center margin">
                             <button id="cadastrarProjetoBtn" class="btn btn-secondary my-2">Cadastrar projeto</button>
                         </div>
@@ -64,7 +64,7 @@
                 <div class=" col-lg-9 col-md-12 col-sm-12 text-white text-center mt-5"> 
                     <h3>Projetos ativos</h3>
                     <div class="card rounded-5 text-center">
-                        <div class="container2 row justify-content-center"> 
+                        <div id="container2" class="container2 row justify-content-center"> 
                             
                             <!-- <div class="col-lg-3 col-md-12 col-sm-12 mx-3"> 
                                 <div class="card rounded-5 card-projetos border-0">
