Remove propriedade minLength dos inputs

--- a/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
+++ b/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
@@ -63,12 +63,12 @@
                     <form id="formulario">
                         <div class="mb-4">
                             <label for="input1" class="form-label">Nome do projeto:</label>
-                            <input required type="text" class="form-control" id="nome-projeto" minlength="5"
+                            <input required type="text" class="form-control" id="nome-projeto" 
                                 maxlength="26" placeholder="Exemplo: Amigos do bem">
                         </div>
                         <div class="mb-4">
                             <label for="input2" class="form-label">Nome de sua instituição:</label>
-                            <input required type="text" class="form-control" id="nome-instituicao" minlength="5"
+                            <input required type="text" class="form-control" id="nome-instituicao" 
                                 maxlength="50" placeholder="Exemplo: PUC Minas">
                         </div>
                         <div class="mb-4">
@@ -94,7 +94,7 @@
                         <div class="mb-3">
                             <label for="textoGrande" class="form-label">Descrição do projeto:</label>
                             <textarea required class="form-control" id="descricao" name="textoGrande" rows="7"
-                                minlength="5" maxlength="250"></textarea>
+                                 maxlength="250"></textarea>
                         </div>
                         <button type="submit" class="btn btn-lg mb-4 btn-secondary">Enviar</button>
                     </form>
