feat: carrega imagens via API

--- a/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
+++ b/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
@@ -88,8 +88,11 @@
                                 style="display: none">
                             <div id="galeria-imagens" class="mb-2">
                             </div>
-                            <button type="button" class="btn btn-secondary" id="btnEscolherImagem">Escolher
-                                imagem</button>
+                            <div>
+                                <button type="button" class="btn btn-secondary" id="btnEscolherImagem">Escolher
+                                    imagem da galeria</button>
+                                <button type="button" class="btn btn-secondary" id="btnEscolherImagemApi">Buscar imagem na web</button>
+                            </div>
                         </div>
                         <div class="mb-3">
                             <label for="textoGrande" class="form-label">Descrição do projeto:</label>
