fix: Bug no link carrega imagens via API

--- a/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
+++ b/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
@@ -86,9 +86,10 @@
                             <label for="imagem" class="form-label">Selecione uma imagem de perfil do projeto:</label>
                             <input required type="text" class="form-control" id="imagem" name="imagem" accept="image/*"
                                 style="display: none">
+                                <div id="campo-busca"></div>
                             <div id="galeria-imagens" class="mb-2">
                             </div>
-                            <div>
+                            <div id="galeria-btn">
                                 <button type="button" class="btn btn-secondary" id="btnEscolherImagem">Escolher
                                     imagem da galeria</button>
                                 <button type="button" class="btn btn-secondary" id="btnEscolherImagemApi">Buscar imagem na web</button>
