fix: Bug no link carrega imagens via API

--- a/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
+++ b/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
@@ -89,7 +89,7 @@
                                 <div id="campo-busca"></div>
                             <div id="galeria-imagens" class="mb-2">
                             </div>
-                            <div id="galeria-btn">
+                            <div id="galeria-btn col-md-6 offset-md-3">
                                 <button type="button" class="btn btn-secondary" id="btnEscolherImagem">Escolher
                                     imagem da galeria</button>
                                 <button type="button" class="btn btn-secondary" id="btnEscolherImagemApi">Buscar imagem na web</button>
